main.tf
provider "aws" {
  region     = "ap-south-1"
  access_key = "AKIAUOHLAYWCSY2TOCUJ"
  secret_key = "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"
}

# 1. Create VPC

# Defining variable

variable "subnet_prefix" {
    description = "cidr block for the subnet"
#    default     = "10.0.1.0/24"             # default value
#    type        = string                     # type can be set to force users to enter the mentioned type variables
}

resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "production"
  }
}

# 2. Create internal gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

# 3. Create custom route table

resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prod"
  }
}

# 4. Create a subnet

resource "aws_subnet" "subnet-1" {
    vpc_id = aws_vpc.prod-vpc.id
#    cidr_block = var.subnet_prefix[0]                 # passing variables as lists
    cidr_block = var.subnet_prefix[0].cidr_block       # passing variables as lists
    availability_zone = "ap-south-1a"

    tags = {
        Name = var.subnet_prefix[0].name
    }
}

resource "aws_subnet" "subnet-2" {
    vpc_id = aws_vpc.prod-vpc.id
#    cidr_block = var.subnet_prefix[1]                 # passing variables as lists
    cidr_block = var.subnet_prefix[1].cidr_block       # passing variables as lists
    availability_zone = "ap-south-1a"

    tags = {
        Name = var.subnet_prefix[1].name
    }
}

# 5. Associate subnet with route table

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create security group to allow port  22,80,443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]        # allow all ipv4 ips
    ipv6_cidr_blocks = ["::/0"]             # allow all ipv6 ips
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"     # here -1 means any port
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

# 8. Assign an elastic ip to the network interface created in step 7

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]  # depends_on takes list as parameter
}

# 9. Create Ubuntu server and install/enable apache2

resource "aws_instance" "srv1" {
  ami               = "ami-06984ea821ac0a879"
  instance_type     = "t2.micro"
  availability_zone = "ap-south-1a"
  key_name          = "LokeshSSH"

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server-nic.id
  }

  user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo My first web server > /var/www/html/index.html'
                EOF

  tags = {
    Name = "web-server"
  }
}

# Print output for different properties of resources

output "server_public_ip" {
    value = aws_eip.one.public_ip
}

output "server_mac" {
    value = aws_network_interface.web-server-nic.mac_address
}

# Note - Make to sure hard-code availability_zone for subnet and instances so that the resources
# will be created on same zone. Also to avoid network issues.


#resource "<provider>_<resource_type>" "name" {
#    config options...
#    key = "value"
#    key2 = "value2"
#}
